--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 body {
-  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f4f4f4;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .container {
@@ -10,6 +10,9 @@ body {
   margin: 0 auto;
   padding: 20px;
   text-align: center;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 
 h1 {
@@ -46,17 +49,29 @@ p {
   position: relative;
 }
 
-.letter-btn {
+.letter-btn,
+.hide-btn {
   padding: 10px 20px;
   font-size: 18px;
+  border: none;
+  color: white;
+  background-color: #4caf50;
+  border-radius: 5px;
   cursor: pointer;
-  display: block;
-  margin-top: 10px;
+  transition: background-color 0.3s;
+}
+
+.letter-btn:hover,
+.hide-btn:hover {
+  background-color: #45a049;
 }
 
 .result {
   display: none;
   margin-bottom: 10px;
+  border: 1px solid #e1e1e1;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 800px) {
